// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

generator dbml {
    provider              = "prisma-dbml-generator"
    includeRelationFields = false
}

datasource db {
    provider = "postgresql"
    // NOTE: When using postgresql, mysql or sqlserver, uncomment the @db.Text annotations in model Account below
    // Further reading:
    // https://next-auth.js.org/adapters/prisma#create-the-prisma-schema
    // https://www.prisma.io/docs/reference/api-reference/prisma-schema-reference#string
    url      = env("DATABASE_URL")
}

// Necessary for Next auth
model Account {
    id                String  @id @default(cuid())
    userId            String
    type              String
    provider          String
    providerAccountId String
    refresh_token     String? @db.Text
    access_token      String? @db.Text
    expires_at        Int?
    token_type        String?
    scope             String?
    id_token          String? // @db.Text
    session_state     String?
    user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@unique([provider, providerAccountId])
}

model Session {
    id           String   @id @default(cuid())
    sessionToken String   @unique
    userId       String
    expires      DateTime
    user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
    id              String            @id @default(cuid())
    name            String?
    email           String?           @unique
    type            String            @default("public")
    emailVerified   DateTime?
    password        String?
    image           String?
    accounts        Account[]
    sessions        Session[]
    HistoryDiagnosa HistoryDiagnosa[]
}

model VerificationToken {
    identifier String
    token      String   @unique
    expires    DateTime

    @@unique([identifier, token])
}

// Tabel Kasus
model Case {
    id                    Int                     @id @default(autoincrement())
    problem               String
    solution              String
    date                  DateTime
    CaseSymptom           CaseSymptom[]
    DetailHistoryDiagnosa DetailHistoryDiagnosa[]
}

// Tabel Gejala
model Symptom {
    id          Int           @id @default(autoincrement())
    description String
    weight      Float
    CaseSymptom CaseSymptom[]
}

// Tabel Korelasi Kasus-Gejala
model CaseSymptom {
    id        Int     @id @default(autoincrement())
    caseId    Int
    symptomId Int
    case      Case    @relation(fields: [caseId], references: [id])
    symptom   Symptom @relation(fields: [symptomId], references: [id])

    @@unique([caseId, symptomId], name: "relationalCaseSymptom")
}

// Tabel HistoryDiagnosa
model HistoryDiagnosa {
    id                    String                  @id @default(cuid())
    user                  User?                   @relation(fields: [userId], references: [id])
    userId                String?
    date                  DateTime                @default(now())
    DetailHistoryDiagnosa DetailHistoryDiagnosa[]
    symptomId             Int[]
}

model Article {
    id    String   @id @default(cuid())
    title String
    body  String
    date  DateTime @default(now())
}

model DetailHistoryDiagnosa {
    id              String          @id @default(cuid())
    historyId       String
    historyDiagnosa HistoryDiagnosa @relation(fields: [historyId], references: [id])
    similarity      Float
    caseId          Int
    case            Case            @relation(fields: [caseId], references: [id])
}
